Adjust jmh testing